--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,10 @@ body {
   margin: 40px;
   text-align: center;
 }
-
+.bnt{
+  background-color: rgb(147, 197, 255);
+  border-radius: 20px;
+}
 #visualization {
   margin-top: 20px;
   border: 1px solid #ccc;
